force-app/main/default/objects/Opportunity/fields/priority_bucket__c.field-meta.xml
<CustomField>
    <fullName>priority_bucket__c</fullName>
    <formula>if( NOT (ISNULL(Next_Action_Date__c)) &amp;&amp; DATEVALUE(Next_Action_Date__c) &lt;= TODAY() &amp;&amp; Last_Call_Attempt_Date__c &lt; Next_Action_Date__c &amp;&amp; DATEVALUE(Next_Action_Date__c) &gt;=DATE(2020,01,13)  &amp;&amp; Last_call_attempt_status__c == &apos;No Contact&apos; , &apos;NO CONTACT - FOLLOW UP&apos;, 
  if( NOT (ISNULL(Next_Action_Date__c)) &amp;&amp; DATEVALUE(Next_Action_Date__c) &lt;= TODAY() &amp;&amp; Last_Call_Attempt_Date__c &lt; Next_Action_Date__c &amp;&amp; DATEVALUE(Next_Action_Date__c) &gt;=DATE(2020,01,13), &apos;FOLLOW UP&apos;,
&apos;NONE&apos; 
    )
)</formula>
    <label>priority bucket</label>
    <type>Text</type>
</CustomField>