force-app/main/default/objects/Opportunity/fields/Proforma_Invoice_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_Sub_Type__c</fullName>
    <label>Proforma Invoice Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Proforma_Invoice_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>