force-app/main/default/objects/Opportunity/fields/Proforma_Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_Type__c</fullName>
    <label>Proforma Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit Price</fullName>
            </value>
            <value>
                <fullName>DLD Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>