force-app/main/default/objects/Opportunity/fields/Project_Website__c.field-meta.xml
<CustomField>
    <fullName>Project_Website__c</fullName>
    <formula>Project__r.Website__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Website</label>
    <type>Text</type>
</CustomField>