force-app/main/default/objects/Opportunity/fields/Promoter_Name__c.field-meta.xml
<CustomField>
    <fullName>Promoter_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoters</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>