force-app/main/default/objects/Opportunity/fields/PS_Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>PS_Next_Action_Date__c</fullName>
    <label>PS Next Action Date</label>
    <type>DateTime</type>
</CustomField>