force-app/main/default/objects/Opportunity/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Capital Gain</fullName>
            </value>
            <value>
                <fullName>End Use</fullName>
            </value>
            <value>
                <fullName>Family Upgrade</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Holiday Home</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Retirement house</fullName>
            </value>
            <value>
                <fullName>Second home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>