force-app/main/default/objects/Opportunity/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rate</label>
    <type>Checkbox</type>
</CustomField>