force-app/main/default/objects/Opportunity/fields/Rate_Status__c.field-meta.xml
<CustomField>
    <fullName>Rate_Status__c</fullName>
    <label>Rate Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>