force-app/main/default/objects/Opportunity/fields/Rates_offered_same_as_attached_cost_shee__c.field-meta.xml
<CustomField>
    <fullName>Rates_offered_same_as_attached_cost_shee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rates Offered Same As Attached Cost Shee</label>
    <type>Checkbox</type>
</CustomField>