force-app/main/default/objects/Opportunity/fields/RATING__c.field-meta.xml
<CustomField>
    <fullName>RATING__c</fullName>
    <label>PSC Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HOT</fullName>
            </value>
            <value>
                <fullName>WARM</fullName>
            </value>
            <value>
                <fullName>COLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>