force-app/main/default/objects/Opportunity/fields/Ready_Possession__c.field-meta.xml
<CustomField>
    <fullName>Ready_Possession__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready Possession</label>
    <type>Checkbox</type>
</CustomField>