force-app/main/default/objects/Opportunity/fields/Reason_For_Cancellation_D__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Cancellation_D__c</fullName>
    <label>Reason For Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low Funds</fullName>
            </value>
            <value>
                <fullName>Cancellation &amp; Transfer</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>