force-app/main/default/objects/Opportunity/fields/Reason_For_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Purchase__c</fullName>
    <label>Reason For Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End Use</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>