force-app/main/default/objects/Opportunity/fields/Reason_for_Reblocking__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Reblocking__c</fullName>
    <label>Reason For Reblocking</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>