force-app/main/default/objects/Opportunity/fields/Reason_For_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Rejection__c</fullName>
    <label>Additional Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>