force-app/main/default/objects/Opportunity/fields/Reasons_for_closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_closed_Lost__c</fullName>
    <label>Reasons For Closed (Lost)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expecting correction in the market</fullName>
            </value>
            <value>
                <fullName>Product Specification</fullName>
            </value>
            <value>
                <fullName>Inventory Choice Availability</fullName>
            </value>
            <value>
                <fullName>Budget / Price / Possession</fullName>
            </value>
            <value>
                <fullName>Payment Schedule</fullName>
            </value>
            <value>
                <fullName>Site Experience</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Invalid Enquiry</fullName>
            </value>
            <value>
                <fullName>Not interested in real estate</fullName>
            </value>
            <value>
                <fullName>competition</fullName>
            </value>
            <value>
                <fullName>committee disapproved</fullName>
            </value>
            <value>
                <fullName>Others with free text option</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>