force-app/main/default/objects/Opportunity/fields/Rechecked_Applicant_Co_applicant_names__c.field-meta.xml
<CustomField>
    <fullName>Rechecked_Applicant_Co_applicant_names__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rechecked Applicant / Co-applicant Names</label>
    <type>Checkbox</type>
</CustomField>