force-app/main/default/objects/Opportunity/fields/Registration_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Registration_Remarks__c</fullName>
    <label>Registration Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>