force-app/main/default/objects/Opportunity/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Due</fullName>
                <default>true</default>
                <label>Not Due</label>
            </value>
            <value>
                <fullName>Registration Pending</fullName>
            </value>
            <value>
                <fullName>WIP</fullName>
            </value>
            <value>
                <fullName>Registration Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>