force-app/main/default/objects/Opportunity/fields/Release_Unit__c.field-meta.xml
<CustomField>
    <fullName>Release_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release Unit</label>
    <type>Checkbox</type>
</CustomField>