force-app/main/default/objects/Opportunity/fields/Residence_and_Office_address_is_legible__c.field-meta.xml
<CustomField>
    <fullName>Residence_and_Office_address_is_legible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residence And Office Address Is Legible</label>
    <type>Checkbox</type>
</CustomField>