force-app/main/default/objects/Opportunity/fields/Revisit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Revisit_Date_Time__c</fullName>
    <label>Revisit Date Time</label>
    <type>DateTime</type>
</CustomField>