force-app/main/default/objects/Opportunity/fields/Revisit_Unique_SVF_Number__c.field-meta.xml
<CustomField>
    <fullName>Revisit_Unique_SVF_Number__c</fullName>
    <label>Revisit SVF Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>