force-app/main/default/objects/Opportunity/fields/Roadshow_Visited_At__c.field-meta.xml
<CustomField>
    <fullName>Roadshow_Visited_At__c</fullName>
    <label>Roadshow Visited At</label>
    <type>DateTime</type>
</CustomField>