force-app/main/default/objects/Opportunity/fields/S_Active__c.field-meta.xml
<CustomField>
    <fullName>S_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>