force-app/main/default/objects/Opportunity/fields/S_Budget_In_lacs__c.field-meta.xml
<CustomField>
    <fullName>S_Budget_In_lacs__c</fullName>
    <label>Budget (In Mn)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>