force-app/main/default/objects/Opportunity/fields/S_Reason_for_closed_lost__c.field-meta.xml
<CustomField>
    <fullName>S_Reason_for_closed_lost__c</fullName>
    <label>Reason For Closed Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Non contactable</fullName>
            </value>
            <value>
                <fullName>Product Specification</fullName>
            </value>
            <value>
                <fullName>Price to High</fullName>
            </value>
            <value>
                <fullName>Low budget</fullName>
            </value>
            <value>
                <fullName>Out of budget</fullName>
            </value>
            <value>
                <fullName>Payment Schedule</fullName>
            </value>
            <value>
                <fullName>Site Experience</fullName>
            </value>
            <value>
                <fullName>committee disapproved</fullName>
            </value>
            <value>
                <fullName>Booked with competition</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Location not prefered</fullName>
            </value>
            <value>
                <fullName>Project not in the preferred locality</fullName>
            </value>
            <value>
                <fullName>Duplicate Lead</fullName>
            </value>
            <value>
                <fullName>Did not confirm the visit</fullName>
            </value>
            <value>
                <fullName>Broker Enquiry</fullName>
            </value>
            <value>
                <fullName>Competitor enquiry</fullName>
            </value>
            <value>
                <fullName>Already invested</fullName>
            </value>
            <value>
                <fullName>Desired configuration unavailable</fullName>
            </value>
            <value>
                <fullName>Choice of inventory not available</fullName>
            </value>
            <value>
                <fullName>Customer interested in ready properties</fullName>
            </value>
            <value>
                <fullName>Apartment size small</fullName>
            </value>
            <value>
                <fullName>Timelines don’t match</fullName>
            </value>
            <value>
                <fullName>Require early possession</fullName>
            </value>
            <value>
                <fullName>Require delayed possession</fullName>
            </value>
            <value>
                <fullName>Invalid enquiry</fullName>
            </value>
            <value>
                <fullName>Wrong number</fullName>
            </value>
            <value>
                <fullName>Did not enquire</fullName>
            </value>
            <value>
                <fullName>Enquired by mistake</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>