force-app/main/default/objects/Opportunity/fields/S_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>S_Sub_Source__c</fullName>
    <label>Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cross Project Exposure</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>