force-app/main/default/objects/Opportunity/fields/S_SVF_printed_on__c.field-meta.xml
<CustomField>
    <fullName>S_SVF_printed_on__c</fullName>
    <label>SVF Printed On</label>
    <type>Date</type>
</CustomField>