force-app/main/default/objects/Opportunity/fields/Sales_Call_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Attempt_Date__c</fullName>
    <label>Sales Last Call Attempt Date</label>
    <type>DateTime</type>
</CustomField>