force-app/main/default/objects/Opportunity/fields/Sales_Call_Attempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Attempt_Status__c</fullName>
    <label>Sales Next Call Attempt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>