force-app/main/default/objects/Opportunity/fields/Sales_Call_Description__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Description__c</fullName>
    <label>Sales Last Call Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>