force-app/main/default/objects/Opportunity/fields/Sales_Call_Proposed_Date_Of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Proposed_Date_Of_Visit__c</fullName>
    <label>Sales Next Call Proposed DateOfVisit</label>
    <type>DateTime</type>
</CustomField>