force-app/main/default/objects/Opportunity/fields/Sales_Call_Rating__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Rating__c</fullName>
    <label>Last Sales Call Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>