force-app/main/default/objects/Opportunity/fields/Sales_First_Call_Attempted_By__c.field-meta.xml
<CustomField>
    <fullName>Sales_First_Call_Attempted_By__c</fullName>
    <label>Sales First Call Attempted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>