force-app/main/default/objects/Opportunity/fields/Sales_First_Call_Description__c.field-meta.xml
<CustomField>
    <fullName>Sales_First_Call_Description__c</fullName>
    <label>Sales First Call Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>