force-app/main/default/objects/Opportunity/fields/Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head__c</fullName>
    <label>Sales Head</label>
    <length>255</length>
    <type>Text</type>
</CustomField>