force-app/main/default/objects/Opportunity/fields/Sales_Head_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities9</relationshipName>
    <type>Lookup</type>
</CustomField>