force-app/main/default/objects/Opportunity/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <label>OLD Sales Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SM1</fullName>
            </value>
            <value>
                <fullName>SM2</fullName>
            </value>
            <value>
                <fullName>SM3</fullName>
            </value>
            <value>
                <fullName>SM4</fullName>
            </value>
            <value>
                <fullName>SM5</fullName>
            </value>
            <value>
                <fullName>SM6</fullName>
            </value>
            <value>
                <fullName>SM7</fullName>
            </value>
            <value>
                <fullName>SM8</fullName>
            </value>
            <value>
                <fullName>SM9</fullName>
            </value>
            <value>
                <fullName>SM10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>