force-app/main/default/objects/Opportunity/fields/Sales_Manager_lookup__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>