force-app/main/default/objects/Opportunity/fields/Sales_Manager_Name_Signature__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Name_Signature__c</fullName>
    <label>Sales Manager Name/Signature</label>
    <length>50</length>
    <type>Text</type>
</CustomField>