force-app/main/default/objects/Opportunity/fields/Sales_manager_Signatures__c.field-meta.xml
<CustomField>
    <fullName>Sales_manager_Signatures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Manager Signatures</label>
    <type>Checkbox</type>
</CustomField>