force-app/main/default/objects/Opportunity/fields/Second_Letter_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Second_Letter_Sent_On__c</fullName>
    <label>Second Letter Sent On</label>
    <type>Date</type>
</CustomField>