force-app/main/default/objects/Opportunity/fields/Servicing_team__c.field-meta.xml
<CustomField>
    <fullName>Servicing_team__c</fullName>
    <label>Servicing Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct RI</fullName>
            </value>
            <value>
                <fullName>Direct NRI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>