force-app/main/default/objects/Opportunity/fields/Sharing_ProjectName__c.field-meta.xml
<CustomField>
    <fullName>Sharing_ProjectName__c</fullName>
    <description>Sharing_ProjectName</description>
    <label>Sharing_Project Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>