force-app/main/default/objects/Opportunity/fields/Site_Visit_Email__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Email__c</fullName>
    <label>Site Visit Email</label>
    <type>Email</type>
</CustomField>