force-app/main/default/objects/Opportunity/fields/Site_Visit_Lead__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Visit Lead</label>
    <type>Checkbox</type>
</CustomField>