force-app/main/default/objects/Opportunity/fields/Site_Visit_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Mobile__c</fullName>
    <label>Site Visit Mobile</label>
    <type>Phone</type>
</CustomField>