force-app/main/default/objects/Opportunity/fields/Site_Visit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Rating__c</fullName>
    <label>Site Visit Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Expression of Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>