force-app/main/default/objects/Opportunity/fields/Source_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Source_Remarks__c</fullName>
    <label>Source Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>