force-app/main/default/objects/Opportunity/fields/Sourcing_TL__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_TL__c</fullName>
    <label>Sourcing TL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Sourcing TL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>