force-app/main/default/objects/Opportunity/fields/Special_Deviation_Charge__c.field-meta.xml
<CustomField>
    <fullName>Special_Deviation_Charge__c</fullName>
    <label>Special Deviation Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>