force-app/main/default/objects/Opportunity/fields/Special_Deviations1__c.field-meta.xml
<CustomField>
    <fullName>Special_Deviations1__c</fullName>
    <label>Special Deviations Comments</label>
    <type>TextArea</type>
</CustomField>