force-app/main/default/objects/Opportunity/fields/SrNo__c.field-meta.xml
<CustomField>
    <fullName>SrNo__c</fullName>
    <label>SrNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>