force-app/main/default/objects/Opportunity/fields/Start_Registration__c.field-meta.xml
<CustomField>
    <fullName>Start_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Registration</label>
    <type>Checkbox</type>
</CustomField>