force-app/main/default/objects/Opportunity/fields/Sub_project_tower__c.field-meta.xml
<CustomField>
    <fullName>Sub_project_tower__c</fullName>
    <formula>Unit__r.Tower__r.Cluster__r.Name + &apos; - &apos; +  Unit__r.Tower__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub project tower</label>
    <type>Text</type>
</CustomField>